<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">formsimu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cbtn1">Continue</string>
     <string name="tryname">Name:</string>
     <string name="trybtn">Send</string>
     <string name="connect">Connect a device</string>
      <string name="discoverable">Make Discoverable</string>
     <string name="txt1">Blood Pressure Arm Simulator</string>
  <string name="txt2">Parameter Settings</string>
    <string name="txt3">Systolic Pressure(mm Hg) :</string>
        <string name="txt4">Diastolic pressure(mm Hg) :</string>
        <string name="txt5">Arrhythmia level(0-50) :</string>
          <string name="txt6">Pulse Volume(0-100) :</string>
           <string name="txt7">Heart Rate(20-150 bpm) :</string>
           <string name="txt8">Simulation mode :</string>  
            <string name="txt9">Pressure Sensing:</string>  
            <string name="btn1">  Send  </string>  
            <string name="btn2">Exit</string> 
                <string name="none_paired">No Paired Devices Found</string> 
                  <string name="none_found">No devices found</string> 
                <string name="paired_devices">List of paired devices</string>   
<string name="new_devices">List of new devices</string>
    <string name="button_scan">Scan</string>
            <string-array name="list1">
                <item>Auscultatory</item>
                   <item>Oscillometric</item>
            </string-array> 
              <string-array name="list2">
                <item>Invasive</item>
                   <item>Non-invasive</item>
            </string-array> 
</resources>