<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
android:background="@drawable/images"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt1"
                android:layout_marginLeft="35dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

          
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt2"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            

  <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt3"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

  <EditText
      android:id="@+id/editText1"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:layout_marginTop="10dp"
      android:inputType="number" >

      <requestFocus />
  </EditText>

            </LinearLayout>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            

  <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt4"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

  <EditText
      android:id="@+id/editText2"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:layout_marginTop="10dp"
      android:inputType="number" >

      <requestFocus />
  </EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            

  <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt5"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

  <EditText
      android:id="@+id/editText3"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:layout_marginTop="10dp"
      android:inputType="number" >

      <requestFocus />
  </EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            

  <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt6"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

  <EditText
      android:id="@+id/editText4"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:layout_marginTop="10dp"
      android:inputType="number" >

      <requestFocus />
  </EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            

  <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt7"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

  <EditText
      android:id="@+id/editText5"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:layout_marginTop="10dp"
      android:inputType="number" >

      <requestFocus />
  </EditText>

            </LinearLayout>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            

  <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt8"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10">
           

            <requestFocus />
        </AutoCompleteTextView>
      

            </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="@string/txt9"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
<AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10">
           

            <requestFocus />
        </AutoCompleteTextView>
             </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/btn1"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="0.25"
            android:text="@string/btn2" 
            android:width="100dp"
            android:onClick="clk2"
             android:background="@android:color/darker_gray"
            android:textColor="@android:color/black"/>
    </LinearLayout>

        </LinearLayout>
    </ScrollView>
    
</LinearLayout>